# VR_Hypno

./: .gitignore  README.md  package-lock.json  package.json  tauri_test.html  tsconfig.json
.github/chatmodes/: Agent.chatmode.md
.github/instructions/: Refactor.instructions.md
BACKUPDATA/: Main.vue
frontend-editor/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-editor/src/: App.vue  Main.vue  main.ts
frontend-editor/src/app/: EditorManager.ts
frontend-editor/src/components/: EditorManager.vue  EditorSidebar.vue  Header.vue  PlayerManager.vue  PlaylistManager.vue
frontend-editor/src/composables/: useSessionEditor.ts
frontend-editor/src/store/: app.ts  editor.ts  locale.ts  navigation.ts
frontend-editor/src/utils/: navigationTree.ts
frontend-player/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-player/src/: App.vue  Player.vue  main.ts
frontend-player/src/components/: PlayerBar.vue  PlayerContent.vue  PlayerMenu.vue  SessionCard.vue
frontend-player/src/composables/: useAudio.ts  useCPUTracker.ts  usePlayerManager.ts  (+3 more)
frontend-vue/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-vue/src/: App.vue
poc/: animation.rs  editor_input.json  keyframes_output.json
shared/: tsconfig.json
shared/domains/: api.ts
shared/icons/: emoji.ts
shared/types/: threejs.ts
shared/utils/: confirmDialog.ts  format.ts  i18n.ts  localeStore.ts  navigation.ts
src-tauri/: Cargo.toml  build.rs  index.html  tauri.conf.json
src-tauri/assets/: assets.json
src-tauri/resources/: update-resources-pack.ps1
src-tauri/src/: main.rs
src-tauri/src/apis/: mod.rs  playlist.rs  sessions.rs  song.rs
src-tauri/src/apis/asset/: api.rs  endpoints.rs  types.rs
src-tauri/src/apis/playlist/: api.rs  endpoints.rs  types.rs
src-tauri/src/apis/session/: api.rs  endpoints.rs  mod.rs  types.rs
src-tauri/src/apis/song/: api.rs  endpoints.rs  types.rs
src-tauri/src/types/: api.rs  threejs.rs
(+36 files in other folders)
