[package]
name = "vr-hypno"
version = "1.0.0"
description = "VR Hypno est une application innovante qui combine la technologie de réalité virtuelle avec les techniques d'hypnose. Cette application offre une expérience immersive aux utilisateurs recherchant des séances."
authors = ["XchanBik <devops.benjamin@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
